fixed column breaks inside drivers/vehicles

--- a/assets/css/drivers.css
+++ b/assets/css/drivers.css
@@ -16,4 +16,5 @@ ul.drivers li {
     text-overflow: ellipsis;
     border: rgba(0,0,0,0.25) solid thin;
     border-radius: 0.25em;
+    break-inside: avoid;
 }
